--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -157,10 +157,10 @@
       <line class="openThree" x1="689.2" y1="348" x2="689.2" y2="181"/>
     </g>
     <g class="stretchEightThree">
-      <line class="openThree" x1="714" y1="348" x2="714" y2="181"/>
+      <line class="openThree" x1="714.5" y1="348" x2="714.5" y2="181"/>
     </g>
     <g class="stretchNineThree">
-      <line class="openThree" x1="769.3" y1="348" x2="769.3" y2="181"/>
+      <line class="openThree" x1="769" y1="348" x2="769" y2="181"/>
     </g>
     <g class="stretchTenThree">
       <line class="openThree" x1="800.1" y1="348" x2="800.1" y2="181"/>
@@ -205,7 +205,7 @@
       <line class="openThree" x1="1372" y1="348" x2="1372" y2="181"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openThree" x1="1441.2" y1="348" x2="1441.2" y2="181"/>
+      <line class="openThree" x1="1441.3" y1="348" x2="1441.3" y2="181"/>
     </g>
     <g class="stretchThree">
       <line class="openThree" x1="1467" y1="348" x2="1467" y2="181"/>
@@ -308,86 +308,86 @@
 	    <path d="M1786.8,474.8c5.3,13.6,7.2,19.7,7.4,23.8h11.2c-1.7-3.2-3.1-6.3-5.6-12.5c-3.1-7.8-5.5-13.6-8.4-20h-8.4
 	  	C1784.3,468.6,1785.5,471.5,1786.8,474.8z"/>
     </g>
-    <g class="stretchOne">
-      <line class="openFour" x1="131" y1="467" x2="131" y2="300"/>
+    <g class="stretchFive">
+      <line class="openFour" x1="131.1" y1="466" x2="131.1" y2="299"/>
     </g>
     <g class="stretchTwoThree">
-      <line class="openFour" x1="200" y1="467" x2="200" y2="300"/>
+      <line class="openFour" x1="205.8" y1="466" x2="205.8" y2="299"/>
     </g>
     <g class="stretchThreeTwo">
-      <line class="openFour" x1="280" y1="467" x2="280" y2="300"/>
+      <line class="openFour" x1="258.3" y1="466" x2="258.3" y2="299"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openFour" x1="400" y1="467" x2="400" y2="300"/>
-    </g>
-    <g class="stretchFiveThree">
-      <line class="openFour" x1="600" y1="467" x2="600" y2="300"/>
-    </g>
-    <g class="stretchSixTwo">
-      <line class="openFour" x1="625" y1="467" x2="625" y2="300"/>
+      <line class="openFour" x1="290" y1="466" x2="290" y2="299"/>
     </g>
     <g class="stretchSevenTwo">
-      <line class="openFour" x1="689.2" y1="467" x2="689.2" y2="300"/>
+      <line class="openFour" x1="321.4" y1="466" x2="321.4" y2="299"/>
     </g>
-    <g class="stretchEightThree">
-      <line class="openFour" x1="714" y1="467" x2="714" y2="300"/>
+    <g class="stretchSevenTwo">
+      <line class="openFour" x1="345.5" y1="466" x2="345.5" y2="299"/>
     </g>
-    <g class="stretchNineThree">
-      <line class="openFour" x1="769.3" y1="467" x2="769.3" y2="300"/>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="376.6" y1="466" x2="376.6" y2="299"/>
+    </g>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="451" y1="466" x2="451" y2="299"/>
+    </g>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="503.6" y1="466" x2="503.6" y2="299"/>
     </g>
     <g class="stretchTenThree">
-      <line class="openFour" x1="800.1" y1="467" x2="800.1" y2="300"/>
+      <line class="openFour" x1="576.9" y1="466" x2="576.9" y2="299"/>
     </g>
-    <g class="stretchTenThree">
-      <line class="openFour" x1="852.3" y1="467" x2="852.3" y2="300"/>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="665.9" y1="466" x2="665.9" y2="299"/>
     </g>
     <g class="stretchElevenThree">
-      <line class="openFour" x1="885" y1="467" x2="885" y2="300"/>
-    </g>
-    <g class="stretchTwelveThree">
-      <line class="openFour" x1="948" y1="467" x2="948" y2="300"/>
+      <line class="openFour" x1="717.1" y1="466" x2="717.1" y2="299"/>
     </g>
     <g class="stretchOne">
-      <line class="openFour" x1="1018.1" y1="467" x2="1018.1" y2="300"/>
+      <line class="openFour" x1="751" y1="466" x2="751" y2="299"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openFour" x1="1062.6" y1="467" x2="1062.6" y2="300"/>
+      <line class="openFour" x1="833.3" y1="466" x2="833.3" y2="299"/>
     </g>
-    <g class="stretchThree">
-      <line class="openFour" x1="1082.3" y1="467" x2="1082.3" y2="300"/>
+    <g class="stretchTwelveThree">
+      <line class="openFour" x1="886.3" y1="466" x2="886.3" y2="299"/>
+    </g>
+    <g class="stretchFive">
+      <line class="openFour" x1="929" y1="466" x2="929" y2="299"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openFour" x1="1113" y1="467" x2="1113" y2="300"/>
+      <line class="openFour" x1="1113" y1="466" x2="1113" y2="299"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openFour" x1="1168" y1="467" x2="1168" y2="300"/>
+      <line class="openFour" x1="1168" y1="466" x2="1168" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1199" y1="467" x2="1199" y2="300"/>
+      <line class="openFour" x1="1199" y1="466" x2="1199" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1251" y1="467" x2="1251" y2="300"/>
+      <line class="openFour" x1="1251" y1="466" x2="1251" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1283.5" y1="467" x2="1283.5" y2="300"/>
+      <line class="openFour" x1="1283.5" y1="466" x2="1283.5" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1347" y1="467" x2="1347" y2="300"/>
+      <line class="openFour" x1="1347" y1="466" x2="1347" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1372" y1="467" x2="1372" y2="300"/>
+      <line class="openFour" x1="1372" y1="466" x2="1372" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1441.2" y1="467" x2="1441.2" y2="300"/>
+      <line class="openFour" x1="1441.2" y1="466" x2="1441.2" y2="299"/>
     </g>
     <g class="stretchOne">
-      <line class="openFour" x1="1467" y1="467" x2="1467" y2="300"/>
+      <line class="openFour" x1="1467" y1="466" x2="1467" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1512" y1="467" x2="1512" y2="300"/>
+      <line class="openFour" x1="1512" y1="466" x2="1512" y2="299"/>
     </g>
     <g class="stretchFourLast">
-      <line class="openFour" x1="1531.2" y1="467" x2="1531.2" y2="300"/>
+      <line class="openFour" x1="1531.3" y1="466" x2="1531.3" y2="299"/>
     </g>
   </g>
 </svg>
