--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -344,7 +344,7 @@
     <g class="stretchElevenThree">
       <line class="openFour" x1="717.1" y1="466" x2="717.1" y2="299"/>
     </g>
-    <g class="stretchOne">
+    <g class="stretchFour">
       <line class="openFour" x1="751" y1="466" x2="751" y2="299"/>
     </g>
     <g class="stretchTwelveThree">
@@ -357,37 +357,52 @@
       <line class="openFour" x1="929" y1="466" x2="929" y2="299"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openFour" x1="1113" y1="466" x2="1113" y2="299"/>
+      <line class="openFour" x1="981.2" y1="466" x2="981.2" y2="299"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openFour" x1="1168" y1="466" x2="1168" y2="299"/>
+      <line class="openFour" x1="1025.4" y1="466" x2="1025.4" y2="299"/>
+    </g>
+    <g class="stretchThirtheenThree">
+      <line class="openFour" x1="1048.5" y1="466" x2="1048.5" y2="299"/>
+    </g>
+    <g class="stretchFour">
+      <line class="openFour" x1="1093.4" y1="466" x2="1093.4" y2="299"/>
+    </g>
+    <g class="stretchFour">
+      <line class="openFour" x1="1212" y1="466" x2="1212" y2="299"/>
+    </g>
+    <g class="stretchTwo">
+      <line class="openFour" x1="1276.5" y1="466" x2="1276.5" y2="299"/>
+    </g>
+    <g class="stretchTwo">
+      <line class="openFour" x1="1301" y1="466" x2="1301" y2="299"/>
+    </g>
+    <g class="stretchTwoThree">
+      <line class="openFour" x1="1327.8" y1="466" x2="1327.8" y2="299"/>
+    </g>
+    <g class="stretchSix">
+      <line class="openFour" x1="1378" y1="466" x2="1378" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1199" y1="466" x2="1199" y2="299"/>
+      <line class="openFour" x1="1412.3" y1="466" x2="1412.3" y2="299"/>
+    </g>
+    <g class="stretchTwelveThree">
+      <line class="openFour" x1="1482.7" y1="466" x2="1482.7" y2="299"/>
+    </g>
+    <g class="stretchSix">
+      <line class="openFour" x1="1595.9" y1="466" x2="1595.9" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1251" y1="466" x2="1251" y2="299"/>
+      <line class="openFour" x1="1641.4" y1="466" x2="1641.4" y2="299"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1283.5" y1="466" x2="1283.5" y2="299"/>
+      <line class="openFour" x1="1711.7" y1="466" x2="1711.7" y2="299"/>
     </g>
-    <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1347" y1="466" x2="1347" y2="299"/>
+    <g class="stretchFourThree">
+      <line class="openFour" x1="1736.5" y1="466" x2="1736.5" y2="299"/>
     </g>
-    <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1372" y1="466" x2="1372" y2="299"/>
-    </g>
-    <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1441.2" y1="466" x2="1441.2" y2="299"/>
-    </g>
-    <g class="stretchOne">
-      <line class="openFour" x1="1467" y1="466" x2="1467" y2="299"/>
-    </g>
-    <g class="stretchFourtheenThree">
-      <line class="openFour" x1="1512" y1="466" x2="1512" y2="299"/>
-    </g>
-    <g class="stretchFourLast">
-      <line class="openFour" x1="1531.3" y1="466" x2="1531.3" y2="299"/>
+    <g class="stretchSix">
+      <line class="openFour" x1="1787.7" y1="466" x2="1787.7" y2="299"/>
     </g>
   </g>
 </svg>
