--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -502,25 +502,25 @@
       <line class="openFive" x1="171.3" y1="588" x2="171.3" y2="421"/>
     </g>
     <g class="stretchTwoThree">
-      <line class="openFive" x1="205.8" y1="588" x2="205.8" y2="421"/>
+      <line class="openFive" x1="231.6" y1="588" x2="231.6" y2="421"/>
     </g>
     <g class="stretchThreeTwo">
-      <line class="openFive" x1="258.3" y1="588" x2="258.3" y2="421"/>
+      <line class="openFive" x1="256.7" y1="588" x2="256.7" y2="421"/>
     </g>
-    <g class="stretchFourThree">
-      <line class="openFive" x1="290" y1="588" x2="290" y2="421"/>
+    <g class="stretchThreeTwo">
+      <line class="openFive" x1="310.5" y1="588" x2="310.5" y2="421"/>
     </g>
-    <g class="stretchSevenTwo">
-      <line class="openFive" x1="321.4" y1="588" x2="321.4" y2="421"/>
+    <g class="stretchOneFive">
+      <line class="openFive" x1="393.4" y1="588" x2="393.4" y2="421"/>
     </g>
-    <g class="stretchSevenTwo">
-      <line class="openFive" x1="345.5" y1="588" x2="345.5" y2="421"/>
+    <g class="stretchFour">
+      <line class="openFive" x1="416" y1="588" x2="416" y2="421"/>
     </g>
-    <g class="stretchFourThree">
-      <line class="openFive" x1="376.6" y1="588" x2="376.6" y2="421"/>
+    <g class="stretchFour">
+      <line class="openFive" x1="489.8" y1="588" x2="489.8" y2="421"/>
     </g>
-    <g class="stretchFourThree">
-      <line class="openFive" x1="451" y1="588" x2="451" y2="421"/>
+    <g class="stretchTwo">
+      <line class="openFive" x1="553.3" y1="588" x2="553.3" y2="421"/>
     </g>
     <g class="stretchFourThree">
       <line class="openFive" x1="503.6" y1="588" x2="503.6" y2="421"/>
