--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -142,7 +142,7 @@ html {
   overflow: visible;
 }
 
-.stretchEightTwo {
+.stretchEightTwo, .stretchOneFive {
   stroke-width: 7.2px;
   stroke: black;
   fill: none;
