--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -156,6 +156,13 @@ html {
   overflow: visible;
 }
 
+.stretchTwoFive {
+  stroke-width: 8.7px;
+  stroke: black;
+  fill: none;
+  overflow: visible;
+}
+
 svg#Layer_2 {
   position: relative;
   top: -54rem;
