--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -519,80 +519,77 @@
     <g class="stretchFour">
       <line class="openFive" x1="489.8" y1="588" x2="489.8" y2="421"/>
     </g>
-    <g class="stretchTwo">
-      <line class="openFive" x1="553.3" y1="588" x2="553.3" y2="421"/>
+    <g class="stretchFive">
+      <line class="openFive" x1="553.4" y1="588" x2="553.4" y2="421"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openFive" x1="503.6" y1="588" x2="503.6" y2="421"/>
+      <line class="openFive" x1="623" y1="588" x2="623" y2="421"/>
     </g>
     <g class="stretchTenThree">
-      <line class="openFive" x1="576.9" y1="588" x2="576.9" y2="421"/>
+      <line class="openFive" x1="649" y1="588" x2="649" y2="421"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openFive" x1="665.9" y1="588" x2="665.9" y2="421"/>
+      <line class="openFive" x1="693" y1="588" x2="693" y2="421"/>
     </g>
     <g class="stretchElevenThree">
-      <line class="openFive" x1="717.1" y1="588" x2="717.1" y2="421"/>
+      <line class="openFive" x1="713.4" y1="588" x2="713.4" y2="421"/>
     </g>
     <g class="stretchFour">
-      <line class="openFive" x1="751" y1="588" x2="751" y2="421"/>
+      <line class="openFive" x1="783.7" y1="588" x2="783.7" y2="421"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openFive" x1="833.3" y1="588" x2="833.3" y2="421"/>
+      <line class="openFive" x1="827.5" y1="588" x2="827.5" y2="421"/>
     </g>
-    <g class="stretchTwelveThree">
-      <line class="openFive" x1="886.3" y1="588" x2="886.3" y2="421"/>
+    <g class="stretchFour">
+      <line class="openFive" x1="848" y1="588" x2="848" y2="421"/>
     </g>
     <g class="stretchFive">
-      <line class="openFive" x1="929" y1="588" x2="929" y2="421"/>
+      <line class="openFive" x1="874.7" y1="588" x2="874.7" y2="421"/>
     </g>
-    <g class="stretchThirtheenThree">
-      <line class="openFive" x1="981.2" y1="588" x2="981.2" y2="421"/>
+    <g class="stretchEightTwo">
+      <line class="openFive" x1="962.5" y1="588" x2="962.5" y2="421"/>
     </g>
-    <g class="stretchThirtheenThree">
-      <line class="openFive" x1="1025.4" y1="588" x2="1025.4" y2="421"/>
+    <g class="stretchEightTwo">
+      <line class="openFive" x1="979" y1="588" x2="979" y2="421"/>
     </g>
-    <g class="stretchThirtheenThree">
-      <line class="openFive" x1="1048.5" y1="588" x2="1048.5" y2="421"/>
+    <g class="stretchEightTwo">
+      <line class="openFive" x1="1018.2" y1="588" x2="1018.2" y2="421"/>
     </g>
-    <g class="stretchFour">
-      <line class="openFive" x1="1093.4" y1="588" x2="1093.4" y2="421"/>
-    </g>
-    <g class="stretchFour">
-      <line class="openFive" x1="1212" y1="588" x2="1212" y2="421"/>
-    </g>
-    <g class="stretchTwo">
-      <line class="openFive" x1="1276.5" y1="588" x2="1276.5" y2="421"/>
-    </g>
-    <g class="stretchTwo">
-      <line class="openFive" x1="1301" y1="588" x2="1301" y2="421"/>
-    </g>
-    <g class="stretchTwoThree">
-      <line class="openFive" x1="1327.8" y1="588" x2="1327.8" y2="421"/>
-    </g>
-    <g class="stretchSix">
-      <line class="openFive" x1="1378" y1="588" x2="1378" y2="421"/>
-    </g>
-    <g class="stretchFourtheenThree">
-      <line class="openFive" x1="1412.3" y1="466" x2="1412.3" y2="421"/>
+    <g class="stretchEightTwo">
+      <line class="openFive" x1="1034.5" y1="588" x2="1034.5" y2="421"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openFive" x1="1482.7" y1="588" x2="1482.7" y2="421"/>
+      <line class="openFive" x1="1142.2" y1="588" x2="1142.1" y2="421"/>
+    </g>
+    <g class="stretchFive">
+      <line class="openFive" x1="1187.6" y1="588" x2="1187.6" y2="421"/>
+    </g>
+    <g class="stretchFive">
+      <line class="openFive" x1="1257.1" y1="588" x2="1257.1" y2="421"/>
+    </g>
+    <g class="stretchTwoThree">
+      <line class="openFive" x1="1282.6" y1="588" x2="1282.6" y2="421"/>
     </g>
     <g class="stretchSix">
-      <line class="openFive" x1="1595.9" y1="588" x2="1595.9" y2="421"/>
+      <line class="openFive" x1="1334" y1="588" x2="1334" y2="421"/>
+    </g>
+    <g class="stretchTwelveThree">
+      <line class="openFive" x1="1367.5" y1="588" x2="1367.5" y2="421"/>
+    </g>
+    <g class="stretchTwoFive">
+      <line class="openFive" x1="1407.3" y1="588" x2="1407.3" y2="421"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFive" x1="1641.4" y1="588" x2="1641.4" y2="421"/>
+      <line class="openFive" x1="1492.7" y1="588" x2="1492.7" y2="421"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openFive" x1="1711.7" y1="588" x2="1711.7" y2="421"/>
+      <line class="openFive" x1="1581.1" y1="588" x2="1581.1" y2="421"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openFive" x1="1736.5" y1="588" x2="1736.5" y2="421"/>
+      <line class="openFive" x1="1633.5" y1="588" x2="1633.5" y2="421"/>
     </g>
-    <g class="stretchSix">
-      <line class="openFive" x1="1787.7" y1="588" x2="1787.7" y2="421"/>
+    <g class="stretchTwelveThree">
+      <line class="openFive" x1="1716.5" y1="588" x2="1716.5" y2="421"/>
     </g>
   </g>
 </svg>
