--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -851,97 +851,100 @@
       <line class="openSeven" x1="120.1" y1="828" x2="120.1" y2="661"/>
     </g>
     <g class="stretchTwoThree">
-      <line class="openSeven" x1="205.8" y1="828" x2="205.8" y2="661"/>
+      <line class="openSeven" x1="197" y1="828" x2="197" y2="661"/>
     </g>
     <g class="stretchThreeTwo">
-      <line class="openSeven" x1="258.3" y1="828" x2="258.3" y2="661"/>
+      <line class="openSeven" x1="269" y1="828" x2="269" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="290" y1="828" x2="290" y2="661"/>
+      <line class="openSeven" x1="351.3" y1="828" x2="351.3" y2="661"/>
+    </g>
+    <g class="stretchFourThree">
+      <line class="openSeven" x1="404" y1="828" x2="404" y2="661"/>
     </g>
     <g class="stretchSevenTwo">
-      <line class="openSeven" x1="321.4" y1="828" x2="321.4" y2="661"/>
-    </g>
-    <g class="stretchSevenTwo">
-      <line class="openSeven" x1="345.5" y1="828" x2="345.5" y2="661"/>
+      <line class="openSeven" x1="487.6" y1="828" x2="487.6" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="376.6" y1="828" x2="376.6" y2="661"/>
+      <line class="openSeven" x1="510.4" y1="828" x2="510.4" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="451" y1="828" x2="451" y2="661"/>
+      <line class="openSeven" x1="684.3" y1="828" x2="684.3" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="503.6" y1="828" x2="503.6" y2="661"/>
+      <line class="openSeven" x1="707" y1="828" x2="707" y2="661"/>
     </g>
     <g class="stretchTenThree">
-      <line class="openSeven" x1="576.9" y1="828" x2="576.9" y2="661"/>
+      <line class="openSeven" x1="780.7" y1="828" x2="780.7" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="665.9" y1="828" x2="665.9" y2="661"/>
+      <line class="openSeven" x1="824" y1="828" x2="824" y2="661"/>
     </g>
     <g class="stretchElevenThree">
-      <line class="openSeven" x1="717.1" y1="828" x2="717.1" y2="661"/>
+      <line class="openSeven" x1="845" y1="828" x2="845" y2="661"/>
     </g>
     <g class="stretchFour">
-      <line class="openSeven" x1="751" y1="828" x2="751" y2="661"/>
+      <line class="openSeven" x1="871.4" y1="828" x2="871.4" y2="661"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openSeven" x1="833.3" y1="828" x2="833.3" y2="661"/>
+      <line class="openSeven" x1="935.5" y1="828" x2="935.5" y2="661"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openSeven" x1="886.3" y1="828" x2="886.3" y2="661"/>
+      <line class="openSeven" x1="1004" y1="828" x2="1004" y2="661"/>
     </g>
     <g class="stretchFive">
-      <line class="openSeven" x1="929" y1="828" x2="929" y2="661"/>
+      <line class="openSeven" x1="1035" y1="828" x2="1035" y2="661"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openSeven" x1="981.2" y1="828" x2="981.2" y2="661"/>
+      <line class="openSeven" x1="1059.6" y1="828" x2="1059.6" y2="661"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openSeven" x1="1025.4" y1="828" x2="1025.4" y2="661"/>
+      <line class="openSeven" x1="1090.7" y1="828" x2="1090.7" y2="661"/>
     </g>
     <g class="stretchThirtheenThree">
-      <line class="openSeven" x1="1048.5" y1="828" x2="1048.5" y2="661"/>
+      <line class="openSeven" x1="1117.3" y1="828" x2="1117.3" y2="661"/>
     </g>
     <g class="stretchFour">
-      <line class="openSeven" x1="1093.4" y1="828" x2="1093.4" y2="661"/>
+      <line class="openSeven" x1="1240" y1="828" x2="1240" y2="661"/>
     </g>
     <g class="stretchFour">
-      <line class="openSeven" x1="1212" y1="828" x2="1212" y2="661"/>
+      <line class="openSeven" x1="1293" y1="828" x2="1293" y2="661"/>
+    </g>
+    <g class="stretchFour">
+      <line class="openSeven" x1="1325" y1="828" x2="1325" y2="661"/>
     </g>
     <g class="stretchTwo">
-      <line class="openSeven" x1="1276.5" y1="828" x2="1276.5" y2="661"/>
-    </g>
-    <g class="stretchTwo">
-      <line class="openSeven" x1="1301" y1="828" x2="1301" y2="661"/>
+      <line class="openSeven" x1="1368" y1="828" x2="1368" y2="661"/>
     </g>
     <g class="stretchTwoThree">
-      <line class="openSeven" x1="1327.8" y1="828" x2="1327.8" y2="661"/>
+      <line class="openSeven" x1="1389" y1="828" x2="1389" y2="661"/>
     </g>
     <g class="stretchSix">
-      <line class="openSeven" x1="1378" y1="828" x2="1378" y2="661"/>
+      <line class="openSeven" x1="1460" y1="828" x2="1460" y2="661"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openSeven" x1="1412.3" y1="828" x2="1412.3" y2="661"/>
+      <line class="openSeven" x1="1533.4" y1="828" x2="1533.4" y2="661"/>
     </g>
     <g class="stretchTwelveThree">
-      <line class="openSeven" x1="1482.7" y1="828" x2="1482.7" y2="661"/>
+      <line class="openSeven" x1="1565" y1="828" x2="1565" y2="661"/>
     </g>
     <g class="stretchSix">
-      <line class="openSeven" x1="1595.9" y1="828" x2="1595.9" y2="661"/>
+      <line class="openSeven" x1="1588.9" y1="828" x2="1588.9" y2="661"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openSeven" x1="1641.4" y1="828" x2="1641.4" y2="661"/>
+      <line class="openSeven" x1="1620" y1="828" x2="1620" y2="661"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openSEven" x1="1711.7" y1="828" x2="1711.7" y2="661"/>
+      <line class="openSEven" x1="1651.7" y1="828" x2="1651.7" y2="661"/>
     </g>
     <g class="stretchFourThree">
-      <line class="openSeven" x1="1736.5" y1="828" x2="1736.5" y2="661"/>
+      <line class="openSeven" x1="1704.6" y1="828" x2="1704.6" y2="661"/>
     </g>
-    <g class="stretchSix">
-      <line class="openSeven" x1="1787.7" y1="828" x2="1787.7" y2="661"/>
+    <g class="stretchTwelveThree">
+      <line class="openSeven" x1="1736.4" y1="828" x2="1736.4" y2="661"/>
+    </g>
+    <g class="stretchTwelveThree">
+      <line class="openSeven" x1="1762.5" y1="828" x2="1762.5" y2="661"/>
     </g>
   </g>
 </svg>
