ok need last svg

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -935,7 +935,7 @@
       <line class="openSeven" x1="1620" y1="828" x2="1620" y2="661"/>
     </g>
     <g class="stretchFourtheenThree">
-      <line class="openSEven" x1="1651.7" y1="828" x2="1651.7" y2="661"/>
+      <line class="openSeven" x1="1651.7" y1="828" x2="1651.7" y2="661"/>
     </g>
     <g class="stretchFourThree">
       <line class="openSeven" x1="1704.6" y1="828" x2="1704.6" y2="661"/>
