--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -948,9 +948,80 @@
     </g>
   </g>
 </svg>
-<div class="box-two">
-  <a href="mailto:edouardnardon@gmail.com" class="home-line static-line be mail">HERE </a>
-</div>
+<svg id="Layer_8" x="0" y="0" version="1.1" viewBox="0 0 1920 1080">
+  <a href="mailto:edouardnardon@gmail.com" class="mail">
+    <g class="wholeHere">
+      <g class="hereTop">
+        <path d="M883.9,867.8L883.9,867.8l-9.8,0c0.7,4.7,1,8.7,1,14.9v29.9h-57.5v-30.2c0-6.2,0.2-9.6,1-14.6h-9.8c0.7,4.7,1,8.5,1,14.9
+	  	  V928h7.8v-7.5h57.5v7.5h7.8v-45.6C882.9,876.2,883.2,873,883.9,867.8z"/>
+	      <path d="M942.5,920.7c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-33v-37.2h38.5c6,0,9.3,0.3,13.3,1v-9.8c-4.3,0.7-8,1-13.3,1
+	  	  h-34.5c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.6,1,15.2V928h7.9v-7.3H942.5z"/>
+	      <path d="M1020.2,920.5c6.5-1.6,9.5-3,13.2-6.5c5.2-5,7.7-11.4,7.7-20.4c0-16.8-9.6-25.9-27.3-25.9h-26.5c-5.4,0-8.5-0.1-13-0.4
+	  	  c0.7,5.6,1,9.8,1,15.3V928h7.8v-5h24.1c4.9,0,8.6,1.3,11.9,5h9.6C1026.1,923.8,1023.5,921.6,1020.2,920.5z M1013.5,915.2
+	  	  L1013.5,915.2l-30.4,0v-39.5h31.2c12.2,0,18.8,6.6,18.8,19c0,6.1-1.6,10.8-4.8,14.3C1024.7,913,1019.2,915.2,1013.5,915.2z"/>
+	      <path d="M1068.1,920.7h33.1c6.2,0,9.1,0.3,13.3,1v-9.8c-4.8,0.7-8,1-13.3,1h-32.9v-37.2h38.5c6,0,9.3,0.3,13.3,1v-9.8
+	  	  c-4.3,0.7-8,1-13.3,1h-34.6c-5.6,0-8.5-0.1-13-0.4c0.7,5.8,1,9.6,1,15.2V928h7.9V920.7z"/>
+      </g>
+      <g class="hereBottom">
+        <path d="M809.9,966.3c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.7-1-8.3-1-14.9V938h-7.8V966.3z"/>
+	      <path d="M875.1,966.3c0,6.3-0.2,10.1-1,14.9h9.8c-0.7-5.1-1-8.4-1-14.9V938h-7.8V966.3z"/>
+	      <path d="M901.5,965.8c0,6.5-0.2,10.7-1,15.8c4.5-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1h-39.7
+	    	V938h-7.9V965.8z"/>
+	      <path d="M975.3,966.4c0,6.5-0.2,10.1-1,14.9h9.8c-0.7-4.8-1-8.3-1-14.9V938h-7.8V966.4z"/>
+        <path d="M1029.4,957.4c5.3,13.6,7.2,19.7,7.4,23.8v0h11.2c-1.7-3.2-3.1-6.3-5.6-12.5c-3.6-9-6.2-15.3-9.8-23
+	    	c-1.4-3.1-2.7-5.7-4-7.7h-9.6C1022.5,941.7,1025.6,947.8,1029.4,957.4z"/>
+	      <path d="M1060.2,938v27.8c0,6.5-0.2,10.7-1,15.8c4.4-0.3,7.4-0.4,13-0.4h35.7c6.3,0,9.4,0.3,13.2,1v-9.8c-4.4,0.7-7.9,1-13.2,1
+	    	h-39.7V938H1060.2z"/>
+        <rect x="809.9" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="821.2" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="832.5" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="843.8" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="855.1" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="866.4" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="877.7" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="888.9" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="900.2" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="911.5" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="922.8" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="934.1" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="945.4" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="956.7" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="968" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="979.3" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="990.6" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1001.9" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1013.2" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1024.5" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1035.8" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1047.1" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1058.4" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1069.7" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1081" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1092.3" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1103.6" y="1002.6" width="6.1" height="6.1"/>
+	      <rect x="1114.9" y="1002.6" width="6.1" height="6.1"/>
+      </g>
+      <g class="stretchOne">
+        <line class="openEight" x1="814" y1="939" x2="814" y2="772"/>
+      </g>
+      <g class="stretchTwo">
+        <line class="openEight" x1="879" y1="939" x2="879" y2="772"/>
+      </g>
+      <g class="stretchFour">
+        <line  class="openEight" x1="905.5" y1="939" x2="905.5" y2="772"/>
+      </g>
+      <g class="stretchFive">
+        <line class="openEight" x1="979.2" y1="939" x2="979.2" y2="772"/>
+      </g>
+      <g class="stretchSix">
+        <line class="openEight" x1="1024" y1="939" x2="1024" y2="772"/>
+      </g>
+      <g class="stretchLast">
+        <line class="openEight" x1="1064.2" y1="939" x2="1064.2" y2="772"/>
+      </g>
+    </g>
+  </a>
+</svg>
 <div class="back">
   <%= link_to root_path(anchor:"up") do %>
     <%= image_tag("arrow.png", width: 90, height: 90) %>
