--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -187,3 +187,7 @@ svg#Layer_8 {
   display: flex;
   justify-content: center;
 }
+
+#Layer_1, #Layer_2, #Layer_3, #Layer_4, #Layer_5, #Layer_6, #Layer_7, #Layer_8 {
+  padding: 0;
+}
