ok got responsive but need to make the anim in % to work well

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
   <div class="down" id="description">
   </div>
   <% end %>
-  <svg id="Layer_1" height="200" version="1.1" viewBox="0 -50 1920 300">
+  <svg id="Layer_1" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeHello">
       <g class="helloTop">
         <path d="M848,26.2L848,26.2l-9.8,0c0.7,4.7,1,8.7,1,14.9V71h-57.5V40.8c0-6.2,0.2-9.6,1-14.6h-9.8c0.7,4.7,1,8.5,1,14.9V83h7.8v-4
@@ -67,7 +67,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_2" height="150" version="1.1" viewBox="0 240 1920 230">
+  <svg id="Layer_2" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeMyName">
       <g class="myNameTop">
         <path d="M690.7 143.9h-11.8c-.7 3.7-2 7.7-4.2 12.9L650.9 215h7.8l17.4-42.3c2.1-5.2 3.8-10.2 6.8-19.7-.6 15.3-.7 19.6-.7 24.7V215h7.5v-55.8c0-6.5.3-10.3 1-15.3zM611 156.9c-1.9-4.3-3.2-8.8-4.1-12.9h-12.1c.7 4.8 1 9.1 1 15.3V215h7.6v-37.3c0-4.8-.2-10.5-.9-24.7 3.3 10 4.9 14.5 7.2 20.1L627 215h7.8L611 156.9zM772.5 155.3c3.7-6.3 5.4-9.1 7.3-11.4h-11.5c-1 3.2-2.2 5.9-5.9 12.4l-22.2 39.4-22.2-39.4c-4.1-7-5.1-9.2-6-12.4h-11.3c2.1 2.9 3.9 5.9 7.2 11.4l28.3 48.4V215h8.1v-11.2l28.2-48.5zM906.5 143.9h-9.8c.7 4.7 1 8.7 1 15V215h7.8v-56.1c0-6.6.2-10.3 1-15zM849.7 155.8c-3.6-5.9-5.1-8.8-6-11.9h-11.2c.7 4.8 1 8.7 1 14.9V215h7.6v-40.2c0-4.3-.1-10.6-.6-21.2 2.8 5.6 5.8 11.2 8.4 15.4l27.4 46h8.9l-35.5-59.2zM964.7 143.9h-10.1c-.5 2.9-1.6 6.1-4 12.7L929.1 215H990.6L969 156.6c-3.3-8.6-3.9-10.4-4.3-12.7zm-24.3 63.2 16.4-46.7c.5-1.2.5-1.2 3-9.2 2.4 7.8 2.5 8 2.8 9.2l16.5 46.7h-38.7zM1029.4 156.9c-1.8-4.3-3.2-8.8-4.1-12.9h-12.1c.7 4.8 1 9.1 1 15.3V215h7.6v-37.3c0-4.8-.2-10.5-.9-24.7 3.3 10 4.9 14.5 7.2 20.1l17.2 41.9h7.8l-23.7-58.1zM1109.2 143.9h-11.8c-.7 3.7-2 7.7-4.2 12.9l-23.8 58.1h7.8l17.4-42.3c2.1-5.2 3.8-10.2 6.8-19.7-.6 15.3-.7 19.6-.7 24.7V215h7.5v-55.8c0-6.5.2-10.3 1-15.3zM1167.9 196.8c6.2 0 9.1.3 13.3 1V188c-4.8.7-8 1-13.3 1H1135v-37.2h38.5c6 0 9.3.3 13.3 1V143c-4.3.7-8 1-13.3 1h-34.6c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.7 1 15.2V215h7.9v-18.2h33.1zM1254.9 143.9h-9.9c.7 4.8 1 8.5 1 14.9V215h7.8v-56.2c0-5.4.4-10.5 1.1-14.9zM1307.3 191.2c-14.2-3.3-14.2-3.3-17.8-5-7.5-3.3-11.2-8.7-11.2-16.3 0-11.7 9.2-19.8 22.6-19.8 8.3 0 14.8 2.9 18.9 8.4 2.5 3.3 3.6 6.1 4.4 11.8l8.5-1.5c-1.2-6.9-2.5-10.2-5.2-14.2-5.4-8.1-14.7-12.4-26.4-12.4-18.6 0-30.7 11-30.7 27.8 0 9.7 4.1 17.1 12 21.8 4.1 2.3 8.5 3.9 16.4 5.8 14.2 3.3 15.9 4 20.1 6.6 3.8 2.3 6.1 6 7 10.8h8.2c-1.4-12.7-9.5-19.7-26.8-23.8z"/>
@@ -128,7 +128,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_3"  height="100" version="1.1" viewBox="0 250 1920 150">
+  <svg id="Layer_3" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeEdouard">
       <g class="edouardTop">
         <path d="m386.4 257.8 2.5 3.6 27.1-17.1-6-8.4zM405.8 317.5c6.2 0 9.1.3 13.3 1v-9.8c-4.8.7-8 1-13.3 1h-33v-37.2h38.5c6 0 9.3.3 13.3 1v-9.8c-4.3.7-8 1-13.3 1h-34.5c-5.6 0-8.5-.1-13-.4.7 5.8 1 9.6 1 15.2V338h7.9v-20.5h33.1zM501.2 276.8c-7.3-8.1-17.6-12.3-30.2-12.3h-20.4c-5.7 0-8.5-.1-13-.4.7 5.8 1 9.8 1 15.2V338h7.8v-65.6h25.2c21.5 0 33.7 15.6 33.7 42.9 0 8.7-1.2 16.4-3.6 22.8h8.5c2.1-6.7 3.1-14.2 3.1-22.5 0-16.8-4.1-30-12.1-38.8zM565.5 262.6c-11.3 0-21.1 4.3-28.5 12.4-8.5 9.4-13.2 24-13.2 41.3 0 8 1 15.2 2.8 21.7h8.8c-2.2-6.3-3.4-13.6-3.4-21.8 0-27.5 13.3-45.7 33.7-45.7 8.8 0 16.4 3.4 22.3 9.9 7.3 8.1 11.1 20.4 11.1 35.8 0 8-1.1 15.4-3.3 21.8h8.7c1.8-6.4 2.8-13.7 2.8-21.7-.1-32.7-16.2-53.7-41.8-53.7zM628.7 330.5v-51c0-6.8.2-10.5 1-15H620c.7 4.7 1 8.5 1 15V331c0 2.4.1 4.7.4 6.9h7.9c-.4-2.2-.6-4.7-.6-7.4zM693.5 279.3c0-6.5.2-10.1 1-14.7h-9.8c.7 4.8 1 8.7 1 15v51c0 2.6-.2 5.1-.5 7.5h7.9c.3-2.2.4-4.5.4-6.9v-51.9zM750.9 277.2c-3.2-8.5-3.8-10.3-4.2-12.7h-10.1c-.5 2.9-1.6 6.1-4 12.7L710.1 338h8.7l.9-2.4h44.2l.9 2.4h8.7l-22.6-60.8zm-28.5 50.6 16.4-46.7c.5-1.2.5-1.2 3-9.2 2.4 7.8 2.5 8 2.8 9.2l16.5 46.7h-38.7zM841.2 317.3c6.5-1.7 9.5-3 13.2-6.5 5.2-5 7.7-11.4 7.7-20.4 0-16.8-9.6-25.9-27.3-25.9h-26.5c-5.4 0-8.5-.1-13-.4.7 5.7 1 9.8 1 15.3V338h7.8v-18.2h24.1c8.7 0 13.6 4.2 19.7 18.2h8.4c-.8-1.8-1.6-3.6-2.5-5.5-4.5-9.7-7.8-13.5-12.6-15.2zm-6.9-5.4H804v-39.5h31.2c12.2 0 18.8 6.6 18.8 19 0 6.1-1.6 10.8-4.8 14.3-3.6 4-9.1 6.2-14.9 6.2zM943.6 276.8c-7.3-8.1-17.6-12.3-30.2-12.3H893c-5.7 0-8.5-.1-13-.4.7 5.8 1 9.8 1 15.2V338h7.8v-65.6H914c21.5 0 33.7 15.6 33.7 42.9 0 8.7-1.2 16.4-3.6 22.8h8.5c2.1-6.7 3.1-14.2 3.1-22.5 0-16.8-4-30-12.1-38.8zM1087.2 264.5h-9.8c.7 4.7 1 8.7 1 15V338h7.8v-58.4c0-6.7.2-10.4 1-15.1zM1030.4 276.4c-3.6-5.9-5.1-8.8-6.1-11.8h-11.2c.7 4.8 1 8.7 1 14.9V338h7.6v-42.6c0-4.3-.1-10.6-.6-21.2 2.8 5.6 5.8 11.2 8.4 15.4l28.8 48.4h8.9l-36.8-61.6zM1145.4 264.5h-10.1c-.5 2.9-1.6 6.1-3.9 12.7l-22.5 60.8h8.7l.9-2.4h44.2l.9 2.4h8.7l-22.5-60.8c-3.4-8.5-4-10.3-4.4-12.7zm-24.3 63.3 16.4-46.7c.5-1.2.5-1.2 3-9.2 2.3 7.8 2.5 8 2.8 9.2l16.5 46.7h-38.7zM1239.9 317.3c6.5-1.7 9.5-3 13.2-6.5 5.2-5 7.7-11.4 7.7-20.4 0-16.8-9.6-25.9-27.3-25.9H1207c-5.4 0-8.5-.1-13-.4.7 5.7 1 9.8 1 15.3V338h7.8v-18.2h24.1c8.7 0 13.6 4.2 19.7 18.2h8.4c-.8-1.8-1.6-3.6-2.5-5.5-4.5-9.7-7.8-13.5-12.6-15.2zm-6.8-5.4h-30.4v-39.5h31.2c12.2 0 18.8 6.6 18.8 19 0 6.1-1.6 10.8-4.8 14.3-3.6 4-9 6.2-14.8 6.2zM1342.3 276.8c-7.3-8.1-17.6-12.3-30.2-12.3h-20.4c-5.7 0-8.5-.1-13-.4.7 5.8 1 9.8 1 15.2V338h7.8v-65.6h25.2c21.5 0 33.7 15.6 33.7 42.9 0 8.7-1.2 16.4-3.6 22.8h8.5c2.1-6.7 3.1-14.2 3.1-22.5 0-16.8-4-30-12.1-38.8zM1406.7 262.6c-11.3 0-21.1 4.3-28.5 12.4-8.5 9.4-13.2 24-13.2 41.3 0 8 1 15.2 2.8 21.7h8.8c-2.2-6.3-3.4-13.6-3.4-21.8 0-27.5 13.3-45.7 33.7-45.7 8.8 0 16.4 3.4 22.3 9.9 7.3 8.1 11.1 20.4 11.1 35.8 0 8-1.1 15.4-3.3 21.8h8.7c1.8-6.4 2.8-13.7 2.8-21.7-.1-32.7-16.2-53.7-41.8-53.7zM1479.4 276.4c-3.6-5.9-5.1-8.8-6.1-11.8h-11.2c.7 4.8 1 8.7 1 14.9V338h7.6v-42.6c0-4.3-.1-10.6-.6-21.2 2.8 5.6 5.8 11.2 8.4 15.4l28.8 48.4h8.9l-36.8-61.6zM1536.2 264.5h-9.8c.7 4.7 1 8.7 1 15V338h7.8v-58.4c0-6.7.2-10.4 1-15.1z"/>
@@ -219,7 +219,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_4" height="100" version="1.1" viewBox="0 370 1920 150">
+  <svg id="Layer_4" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeIAm">
       <g class="iAmTop">
   	    <path d="M136.1,385.2h-9.9c0.7,4.8,1,8.5,1,14.9v56h7.8v-56C135,394.7,135.3,389.6,136.1,385.2z"/>
@@ -407,7 +407,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_5" height="100" version="1.1" viewBox="0 490 1920 150">
+  <svg id="Layer_5" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeBased">
       <g class="basedTop">
         <path d="M227.8,560.3c-3.3-3.2-6.3-4.7-11.9-5.8c5-1.8,7.2-3,9.6-5.4c4.4-4.3,6.7-10.3,6.7-18.2c0-16.1-9.9-25.1-27.4-25.1h-25.5
@@ -594,7 +594,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_6" height="100" version="1.1" viewBox="0 610 1920 150">
+  <svg id="Layer_6" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeEnquiries">
       <g class="enquiriesTop">
         <path d="M381.7,679.8c6.2,0,9.5,0.3,13.3,1v-9.9c-4.6,0.7-7.8,1-13.3,1h-29.5v-37.3h36.3c6.2,0,9.4,0.3,13.5,1v-9.9
@@ -752,7 +752,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_7" height="100" version="1.1" viewBox="0 730 1920 150">
+  <svg id="Layer_7" version="1.1" viewBox="0 0 1920 1080">
     <g class="wholeSend">
       <g class="sendTop">
   	    <path d="M153.4,747.1h-25c-5.4,0-8.5-0.1-13-0.4c0.7,5.6,1,9.8,1,15.2v55.8h7.9v-10.2h28.6c18.4,0,29.1-11.4,29.1-31
@@ -949,7 +949,7 @@
       </g>
     </g>
   </svg>
-  <svg id="Layer_8" height="100" version="1.1" viewBox="0 850 1920 150">
+  <svg id="Layer_8" version="1.1" viewBox="0 0 1920 1080">
     <a href="mailto:edouardnardon@gmail.com" class="mail">
       <g class="wholeHere">
         <g class="hereTop">
