--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1023,7 +1023,7 @@
   </svg>
   <div class="back">
     <%= link_to root_path(anchor:"up") do %>
-      <%= image_tag("arrow.png", width: 90, height: 90) %>
+      <%= image_tag("arrow.png", width: 90, height: 90, class: "smaller") %>
     <% end %>
   </div>
 </div>
